@@ -1,3 +1,11 @@
+2011-03-09 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions.php: fixed in the function "get_system_time" copy&paste
+	mistake.
+	
+	* pandoradb.postgreSQL.sql: in the table "tusuario" added empty string for
+	the column "middlename".
+
 2011-03-08 Miguel de Dios  <miguel.dedios@artica.es>
 
 	* include/functions_html.php, include/functions_messages.php,
